separacao do conteudo sobre unicidade e exemplos de sistemas simples

--- a/Topicos/Algelin/intro-sistemas-lineares.ipynb
+++ b/Topicos/Algelin/intro-sistemas-lineares.ipynb
@@ -18,19 +18,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\\begin{array}{r}\n",
+    "$$\\begin{array}{r}\n",
     "       x_{1} & + & 5 \\, x_{2} & - & 5.3 \\, x_{3} & = & y_{1} \\\\\n",
     "2.4 \\, x_{1} & - & 2 \\, x_{2} & + & x_{3} & = & y_{2} \\\\\n",
     "7.8 \\, x_{1} & - & 4.1 \\, x_{2} & + & 6.4 \\, x_{3} & = & y_{3} \\\\\n",
-    "\\end{array}\n",
-    "$ ,"
+    "\\end{array} \\: .\n",
+    "$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "em que $x_{1}$, $x_{2}$, $x_{3}$ são as incógnitas. Note que $y_{i}$, $i = 1, 2, 3$, são [combinações lineares](http://mathworld.wolfram.com/LinearCombination.html) das variáveis  $x_{1}$, $x_{2}$, $x_{3}$. Isso significa que a derivada de $y_{i}$, $i = 1, 2, 3$, em relação a qualquer uma das variáveis $x_{1}$, $x_{2}$, $x_{3}$ é uma constante. Por exemplo, a derivada de $y_{2}$ em relação a $x_{3}$ é igual a $1$."
+    "Note que $y_{i}$, $i = 1, 2, 3$, são [combinações lineares](http://mathworld.wolfram.com/LinearCombination.html) das variáveis  $x_{1}$, $x_{2}$, $x_{3}$. Isso significa que a derivada de $y_{i}$, $i = 1, 2, 3$, em relação a qualquer uma das variáveis $x_{1}$, $x_{2}$, $x_{3}$ é uma constante. Por exemplo, a derivada de $y_{2}$ em relação a $x_{3}$ é igual a $1$."
    ]
   },
   {
@@ -44,7 +44,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\\mathbf{A}\\, \\mathbf{x} = \\mathbf{y} \\: ,$"
+    "$$\\mathbf{A}\\, \\mathbf{x} = \\mathbf{y} \\: ,$$"
    ]
   },
   {
@@ -58,26 +58,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\\mathbf{A} = \\left[\n",
+    "$$\\mathbf{A} = \\left[\n",
     "\\begin{array}{ccc}\n",
     "1 & 5 & -5,3 \\\\\n",
     "2,4 & -2 & 1 \\\\\n",
-    "7,8 & -4.1 & 6,4\n",
+    "7,8 & -4,1 & 6,4\n",
     "\\end{array}\n",
-    "\\right]_{3 \\times 3} \\: ,$"
+    "\\right]_{3 \\times 3} \\: ,$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\\mathbf{y} = \\left[\n",
+    "$$\\mathbf{y} = \\left[\n",
     "\\begin{array}{c}\n",
     "y_{1} \\\\\n",
     "y_{2} \\\\\n",
     "y_{3}\n",
     "\\end{array}\n",
-    "\\right]_{3 \\times 1}$"
+    "\\right]_{3 \\times 1}$$"
    ]
   },
   {
@@ -91,13 +91,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\\mathbf{x} = \\left[\n",
+    "$$\\mathbf{x} = \\left[\n",
     "\\begin{array}{c}\n",
     "x_{1} \\\\\n",
     "x_{2} \\\\\n",
     "x_{3}\n",
     "\\end{array}\n",
-    "\\right]_{3 \\times 1} \\: .$"
+    "\\right]_{3 \\times 1} \\: .$$"
    ]
   },
   {
@@ -111,125 +111,184 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tal como visto anteriormente, o produto $\\mathbf{A} \\mathbf{x}$ pode ser reescrito como uma combinação linear das colunas de $\\mathbf{A}$. Dessa forma, é possível reescrever o sistema linear da seguinte forma:"
+    "Sistemas lineares são muito comuns em problemas de geofísica. Geralmente, $\\mathbf{y}$ contém grandezas observáveis (medidas de anomalia de gravidade, anomalia de campo total, tempo de chegada de ondas sísmicas, componentes horizontal e vertical de campos elétricos e magnéticos, etc.) e, portanto, é conhecido. A matriz $\\mathbf{A}$, normalmente, contém grandezas observáveis secundárias (por exemplo, coordenadas geográficas, tempo, parâmetros de aquisição, etc.) e, portanto, também é conhecida. Já o vetor $\\mathbf{x}$ contém variáveis desconhecidas, ou incógnitas. Estas variáveis são, geralmente, parâmetros que descrevem o sistema físico em estudo. Por exemplo, dimensões de um corpo geológicos, distribuição de velocidades sísmicas, distribuição de resistividade elétrica, etc."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\\begin{split}\n",
-    "\\mathbf{y} & =\n",
-    "x_{1} \\left[\n",
+    "Resolver um sistema linear, portanto, significa determinar o vetor $\\mathbf{x}$ a partir da matriz $\\mathbf{A}$ e do vetor $\\mathbf{y}$. Alguns sistemas lineares são relativamente fáceis de serem resolvidos, tais como os exemplos apresentados abaixo."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##Sistema linear envolvendo matriz diagonal"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Neste caso, os elementos da matriz $\\mathbf{A}$ fora da diagonal principal são nulos:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\\begin{split}\n",
+    "\\mathbf{A} \n",
+    "& = \\left[ \\begin{array}{ccc}\n",
+    "a_{11} & a_{12} & a_{13} \\\\\n",
+    "a_{21} & a_{22} & a_{23} \\\\\n",
+    "a_{31} & a_{32} & a_{33}\n",
+    "\\end{array} \\right]_{3 \\times 3} \\\\\\\\\n",
+    "& = \\left[ \\begin{array}{ccc}\n",
+    "a_{11} & 0 & 0 \\\\\n",
+    "0 & a_{22} & 0 \\\\\n",
+    "0 & 0 & a_{33}\n",
+    "\\end{array} \\right]_{3 \\times 3} \\: .\n",
+    "\\end{split}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A solução deste tipo de sistema é dada por:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\\begin{split}\n",
     "\\begin{array}{c}\n",
-    "1 \\\\\n",
-    "2,4 \\\\\n",
-    "7,8\n",
-    "\\end{array} \\right]_{3 \\times 1} +\n",
-    "x_{2} \\left[\n",
+    "x_{1} = \\dfrac{y_{1}}{a_{11}} \\\\\\\\\n",
+    "x_{2} = \\dfrac{y_{2}}{a_{22}} \\\\\\\\\n",
+    "x_{3} = \\dfrac{y_{3}}{a_{33}}\n",
+    "\\end{array}\n",
+    "\\end{split} \\: .$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##Sistema linear envolvendo matriz triangular superior"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Neste caso, os elementos da matriz $\\mathbf{A}$ abaixo da diagonal principal são nulos:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\\begin{split}\n",
+    "\\mathbf{A} \n",
+    "& = \\left[ \\begin{array}{ccc}\n",
+    "a_{11} & a_{12} & a_{13} \\\\\n",
+    "a_{21} & a_{22} & a_{23} \\\\\n",
+    "a_{31} & a_{32} & a_{33}\n",
+    "\\end{array} \\right]_{3 \\times 3} \\\\\\\\\n",
+    "& = \\left[ \\begin{array}{ccc}\n",
+    "a_{11} & a_{12} & a_{13} \\\\\n",
+    "0 & a_{22} & a_{23} \\\\\n",
+    "0 & 0 & a_{33}\n",
+    "\\end{array} \\right]_{3 \\times 3} \\: .\n",
+    "\\end{split}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A solução deste tipo de sistema pode ser calculada por meio de um algoritmo denominado *substituição regressiva*. De acordo com este algoritmo, os elementos do vetor $\\mathbf{x}$ são calculados do último até o primeiro, tal como descrito abaixo:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\\begin{split}\n",
     "\\begin{array}{c}\n",
-    "5 \\\\\n",
-    "-2 \\\\\n",
-    "-4,1\n",
-    "\\end{array} \\right]_{3 \\times 1} +\n",
-    "x_{3} \\left[\n",
-    "\\begin{array}{c}\n",
-    "-5,3 \\\\\n",
-    "1 \\\\\n",
-    "6,4\n",
-    "\\end{array} \\right]_{3 \\times 1} \\\\\\\\\n",
-    "& = x_{1} \\, \\mathbf{A}(:,1) + x_{2} \\, \\mathbf{A}(:,2) + x_{3} \\, \\mathbf{A}(:,3) \\: ,\n",
-    "\\end{split}$"
+    "a_{33} \\, x_{3} = y_{33} \\rightarrow x_{33} = \\dfrac{y_{3}}{a_{33}} \\\\\\\\\n",
+    "a_{22} \\, x_{2} + a_{23} \\, x_{3} = y_{2} \\rightarrow\n",
+    "x_{2} = \\dfrac{y_{2} - a_{23} \\, x_{3}}{a_{22}} \\\\\\\\\n",
+    "a_{11} \\, x_{1} + a_{12} \\, x_{2} + a_{13} \\, x_{3} = y_{1} \\rightarrow\n",
+    "x_{1} = \\dfrac{y_{1} - a_{12} \\, x_{2} - a_{13} \\, x_{3}}{a_{11}}\n",
+    "\\end{array}\n",
+    "\\end{split} \\: .$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "em que"
+    "Note que esta expressão permite elaborar o seguinte algoritmo para a solução deste sistema:"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\\mathbf{A}(:,1) = \\left[\n",
-    "\\begin{array}{c}\n",
-    "1 \\\\\n",
-    "2,4 \\\\\n",
-    "7,8\n",
-    "\\end{array} \\right]_{3 \\times 1}$ ,"
+    "----\n",
+    "for $i = N:1:-1$\n",
+    "\n",
+    ">$x_{i} = y_{i}$\n",
+    "\n",
+    ">for $j = \\left( i+1 \\right):N:1$ \n",
+    "\n",
+    ">>$x_{i} = x_{i} - a_{ij} \\, x_{j}$\n",
+    "\n",
+    ">end\n",
+    "\n",
+    ">$x_{i} = \\dfrac{x_{i}}{a_{ii}}$\n",
+    "\n",
+    "end\n",
+    "\n",
+    "-----"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\\mathbf{A}(:,2) = \\left[\n",
-    "\\begin{array}{c}\n",
-    "5 \\\\\n",
-    "-2 \\\\\n",
-    "-4,1\n",
-    "\\end{array} \\right]_{3 \\times 1}$"
+    "**ATENÇÃO**: Neste algotimo, o comando \"for $i = N:1:-1$\" significa que o contador $i$ começa em $N$ e termina em $1$, em intervalos de $-1$. Analogamente, o comando for $j = \\left( i+1 \\right):N:1$ significa que o contador $j$ começa em $\\left( i+1 \\right)$ e termina em $N$, em intervalos de $1$."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "e"
+    "###Exercício"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\\mathbf{A}(:,3) = \\left[\n",
-    "\\begin{array}{c}\n",
-    "-5,3 \\\\\n",
-    "1 \\\\\n",
-    "6,4\n",
-    "\\end{array} \\right]_{3 \\times 1}$."
+    "Implemente o algoritmo apresentado acima para resolver um sistema envolvendo uma matriz triangular superior. **A implementação deve seguir o template da disciplina**."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Esta formulação evidencia o fato de que o vetor $\\mathbf{y}$ é uma [combinação linear](http://mathworld.wolfram.com/LinearCombination.html) das colunas da matriz $\\mathbf{A}$, cujos coeficientes são os elementos do vetor $\\mathbf{x}$."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Esta formulação nos permite analisar a unicidade da solução do sistema linear acima. A unicidade da solução de um sistema linear está relacionada à seguinte questão: Seja uma matriz $\\mathbf{A}$ e um determinado vetor $\\mathbf{y} = \\mathbf{y}^{\\dagger}$. Existem diferentes vetores $\\mathbf{x}$ cujo produto $\\mathbf{A} \\mathbf{x}$ produz o mesmo vetor $\\mathbf{y}^{\\dagger}$? Ou seja, existem diferentes vetores $\\mathbf{x}$ que satisfazem a equação"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$\\mathbf{A}\\, \\mathbf{x} = \\mathbf{y}^{\\dagger}$ ?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Se existir apenas um determinado vetor $\\mathbf{x} = \\mathbf{x}^{\\dagger}$ que satisfaz a equação acima, então a solução do sistema linear é **única**. Nesse caso, diz-se que as colunas da matriz $\\mathbf{A}$ formam uma [base](http://mathworld.wolfram.com/VectorSpaceBasis.html), o que corresponde a dizer que as colunas de $\\mathbf{A}$ são vetores [linearmente independentes](http://mathworld.wolfram.com/LinearlyIndependent.html) e que $\\mathbf{A}$ tem posto (ou *rank*) completo."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "###Exemplo de sistema linear com múltiplas soluções"
+    "###Exemplo de implementação em Python"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -242,124 +301,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Considere o sistema linear $\\mathbf{y}^{\\dagger} = \\mathbf{A} \\mathbf{x}$, em que"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "$\\mathbf{A} = \\left[\n",
-    "\\begin{array}{rrr}\n",
-    "1,0 & 4,3 & 2,0 \\\\\n",
-    "2,7 & 5,0 & 5,4 \\\\\n",
-    "-3,1 & 6,0 & -6,2\n",
-    "\\end{array}\n",
-    "\\right]_{3 \\times 3}$"
+    "`x = np.linalg.solve(A,y)` ,\n",
+    "\n",
+    "em que A e y são arrays do numpy."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "A = np.array([[1.,2.,7.],\n",
+    "              [3.,14.,8.],\n",
+    "              [25.,6.,9.]])\n",
+    "y = np.array([[42.],\n",
+    "              [11.],\n",
+    "              [67.]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "A = np.array([[1., 1., 2.],\n",
-    "              [0.7, 1., 1.4],\n",
-    "              [-3.1, 1.0, -6.2]])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "(observe que a terceira coluna de $\\mathbf{A}$ é igual a duas vezes a primeira coluna) e"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$\\mathbf{y}^{\\dagger} = \\left[\n",
-    "\\begin{array}{c}\n",
-    "9,0 \\\\\n",
-    "6,6 \\\\\n",
-    "-23,8\n",
-    "\\end{array}\n",
-    "\\right]_{3 \\times 3}$ ."
+    "x = np.linalg.solve(A,y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "y = np.array([[9.],\n",
-    "              [6.6],\n",
-    "              [-23.8]])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Considere o vetor $\\mathbf{x}_{1}$ abaixo:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$\\mathbf{x}_{1} = \\left[\n",
-    "\\begin{array}{c}\n",
-    "2,0 \\\\\n",
-    "1,0 \\\\\n",
-    "3,0\n",
-    "\\end{array}\n",
-    "\\right]_{3 \\times 3}$"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "x1 = np.array([[2.0],\n",
-    "              [1.0],\n",
-    "              [3.0]])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Observe que este vetor é uma solução do sistema linear, ou seja, o produto $\\mathbf{A} \\mathbf{x}_{1}$ produz um vetor $\\mathbf{y}_{1} = \\mathbf{y}^{\\dagger}$."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "y1 =A.dot(x1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -368,126 +344,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[  9. ]\n",
-      " [  6.6]\n",
-      " [-23.8]]\n"
+      "[[ 1.02842105]\n",
+      " [-3.32157895]\n",
+      " [ 6.80210526]]\n"
      ]
     }
    ],
    "source": [
-    "print y1"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Agora, considere o outro vetor $\\mathbf{x}_{2}$ abaixo:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$\\mathbf{x}_{2} = \\left[\n",
-    "\\begin{array}{c}\n",
-    "6,0 \\\\\n",
-    "1,0 \\\\\n",
-    "1,0\n",
-    "\\end{array}\n",
-    "\\right]_{3 \\times 3}$"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "x2 = np.array([[6.0],\n",
-    "              [1.0],\n",
-    "              [1.0]])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Observe que este vetor é outra solução do sistema linear, isto é, o produto $\\mathbf{A} \\mathbf{x}_{2}$ produz um vetor $\\mathbf{y}_{2} = \\mathbf{y}^{\\dagger}$:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "y2 = A.dot(x2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[  9. ],\n",
-       "       [  6.6],\n",
-       "       [-23.8]])"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y2"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Na verdade, este sistema linear possui infinitas soluções. Para verificar esta falta de unicidade, vamos reescrever o sistema linear da seguinte forma:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$\\begin{split}\n",
-    "\\mathbf{y}^{\\dagger} & = x_{1} \\mathbf{A}(:,1) + x_{2} \\mathbf{A}(:,2) + x_{3} \\mathbf{A}(:,3) \\\\\n",
-    "                     & = \\left( x_{1} + 2 \\, x_{3} \\right) \\mathbf{A}(:,1) + x_{2} \\mathbf{A}(:,2) \\: .\n",
-    "\\end{split}$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Neste caso, verifica-se que qualquer vetor $\\mathbf{x}$ que satisfaz a condição $x_{2} = 1$ e $x_{1} + 2 \\, x_{3} = 8$ é uma solução do sistema linear. Isto é, para qualquer valor de $x_{1}$, a solução pode ser escrita da seguinte forma:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$\\mathbf{x} = \\left[\n",
-    "\\begin{array}{c}\n",
-    "x_{1} \\\\\n",
-    "1 \\\\\n",
-    "\\left(8 - x_{1} \\right)/2\n",
-    "\\end{array}\n",
-    "\\right]$ ."
+    "print x"
    ]
   },
   {
