continuacao da aula sobre eliminacao de Gauss

--- a/Topicos/Sistemas_lineares/elim-gauss.ipynb
+++ b/Topicos/Sistemas_lineares/elim-gauss.ipynb
@@ -83,7 +83,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "É possível transformar este sistema linear em outro sistema linear equivalente envolvendo uma matriz triangular superior dado por:"
+    "É possível transformar este sistema linear em outro sistema linear contendo uma matriz triangular superior, tal como exemplificado abaixo:"
    ]
   },
   {
@@ -157,160 +157,62 @@
    "source": [
     "$$\n",
     "\\begin{array}{ccccc}\n",
-    "\\mathbf{A}_{1} = \\left(\\mathbf{I} - \\mathbf{M}_{1}\\right) \\mathbf{A} & & &\n",
-    "\\mathbf{y}_{1} = \\left(\\mathbf{I} - \\mathbf{M}_{1}\\right) \\mathbf{y} \\\\\\\\\n",
-    "\\mathbf{A}_{2} = \\left(\\mathbf{I} - \\mathbf{M}_{2}\\right) \\mathbf{A}_{1} & & &\n",
-    "\\mathbf{y}_{2} = \\left(\\mathbf{I} - \\mathbf{M}_{2}\\right) \\mathbf{y}_{1} \\\\\\\\\n",
+    "\\mathbf{A}^{(1)} = \\left(\\mathbf{I} - \\mathbf{M}^{(1)}\\right) \\mathbf{A} & & &\n",
+    "\\mathbf{y}^{(1)} = \\left(\\mathbf{I} - \\mathbf{M}^{(1)}\\right) \\mathbf{y} \\\\\\\\\n",
+    "\\mathbf{A}^{(2)} = \\left(\\mathbf{I} - \\mathbf{M}^{(2)}\\right) \\mathbf{A}^{(1)} & & &\n",
+    "\\mathbf{y}^{(2)} = \\left(\\mathbf{I} - \\mathbf{M}^{(2)}\\right) \\mathbf{y}^{(1)} \\\\\\\\\n",
     "\\vdots & & & \\vdots \\\\\\\\\n",
-    "\\mathbf{A}_{N-2} = \\left(\\mathbf{I} - \\mathbf{M}_{N-2}\\right) \\mathbf{A}_{N-3} & & &\n",
-    "\\mathbf{y}_{N-2} = \\left(\\mathbf{I} - \\mathbf{M}_{N-2}\\right) \\mathbf{y}_{N-3} \\\\\\\\\n",
-    "\\mathbf{B} = \\left(\\mathbf{I} - \\mathbf{M}_{N-1}\\right) \\mathbf{A}_{N-2} & & &\n",
-    "\\mathbf{z} = \\left(\\mathbf{I} - \\mathbf{M}_{N-1}\\right) \\mathbf{y}_{N-2} \\\\\\\\\n",
-    "\\end{array}$$"
+    "\\mathbf{A}^{(N-2)} = \\left(\\mathbf{I} - \\mathbf{M}^{(N-2)}\\right) \\mathbf{A}^{(N-3)} & & &\n",
+    "\\mathbf{y}^{(N-2)} = \\left(\\mathbf{I} - \\mathbf{M}^{(N-2)}\\right) \\mathbf{y}^{(N-3)} \\\\\\\\\n",
+    "\\mathbf{B} = \\left(\\mathbf{I} - \\mathbf{M}^{(N-1)}\\right) \\mathbf{A}^{(N-2)} & & &\n",
+    "\\mathbf{z} = \\left(\\mathbf{I} - \\mathbf{M}^{(N-1)}\\right) \\mathbf{y}^{(N-2)} \\\\\\\\\n",
+    "\\end{array} \\: ,$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##Sistema linear envolvendo matriz diagonal"
+    "em que $\\mathbf{I}$ é a matriz identidade de ordem $N$,"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Neste caso, os elementos da matriz $\\mathbf{A}$ fora da diagonal principal são nulos:"
+    "$$\\mathbf{M}^{(k)} = \\mathbf{t}^{(k)} \\otimes (\\mathbf{u}^{(k)})^{\\top} \\: ,$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\begin{split}\n",
-    "\\mathbf{A} \n",
-    "& = \\left[ \\begin{array}{ccc}\n",
-    "a_{11} & a_{12} & a_{13} \\\\\n",
-    "a_{21} & a_{22} & a_{23} \\\\\n",
-    "a_{31} & a_{32} & a_{33}\n",
-    "\\end{array} \\right]_{3 \\times 3} \\\\\\\\\n",
-    "& = \\left[ \\begin{array}{ccc}\n",
-    "a_{11} & 0 & 0 \\\\\n",
-    "0 & a_{22} & 0 \\\\\n",
-    "0 & 0 & a_{33}\n",
-    "\\end{array} \\right]_{3 \\times 3} \\: .\n",
-    "\\end{split}$$"
+    "$\\mathbf{u}^{(k)}$ é um vetor $N \\times 1$ com o $k$-ésimo elemento igual a $1$ e os demais iguais a zero e $\\mathbf{t}^{(k)}$ é um vetor $N \\times 1$, cujo $i$-ésimo elemento $t_{i}^{(k)}$ é dado por:"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A solução deste tipo de sistema é dada por:"
+    "$t_{i}^{(k)} = \\begin{cases} 0 & \\quad \\text{if } i \\le k \\\\\\\\ \\dfrac{a^{(k)}_{ik}}{a^{(k)}_{kk}} & \\quad \\text{if } i \\gt k\\\\ \\end{cases} \\: ,$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\begin{split}\n",
-    "\\begin{array}{c}\n",
-    "x_{1} = \\dfrac{y_{1}}{a_{11}} \\\\\\\\\n",
-    "x_{2} = \\dfrac{y_{2}}{a_{22}} \\\\\\\\\n",
-    "x_{3} = \\dfrac{y_{3}}{a_{33}}\n",
-    "\\end{array}\n",
-    "\\end{split} \\: .$$"
+    "where $a^{(k)}_{ij}$ é o elemento $ij$ da matriz $\\mathbf{A}^{(k)}$."
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
-    "##Sistema linear envolvendo matriz triangular superior"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Neste caso, os elementos da matriz $\\mathbf{A}$ abaixo da diagonal principal são nulos:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$\\begin{split}\n",
-    "\\mathbf{A} \n",
-    "& = \\left[ \\begin{array}{ccc}\n",
-    "a_{11} & a_{12} & a_{13} \\\\\n",
-    "a_{21} & a_{22} & a_{23} \\\\\n",
-    "a_{31} & a_{32} & a_{33}\n",
-    "\\end{array} \\right]_{3 \\times 3} \\\\\\\\\n",
-    "& = \\left[ \\begin{array}{ccc}\n",
-    "a_{11} & a_{12} & a_{13} \\\\\n",
-    "0 & a_{22} & a_{23} \\\\\n",
-    "0 & 0 & a_{33}\n",
-    "\\end{array} \\right]_{3 \\times 3} \\: .\n",
-    "\\end{split}$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "A solução deste tipo de sistema pode ser calculada por meio de um algoritmo denominado *substituição regressiva*. De acordo com este algoritmo, os elementos do vetor $\\mathbf{x}$ são calculados do último até o primeiro, tal como descrito abaixo:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$\\begin{split}\n",
-    "\\begin{array}{c}\n",
-    "a_{33} \\, x_{3} = y_{33} \\rightarrow x_{33} = \\dfrac{y_{3}}{a_{33}} \\\\\\\\\n",
-    "a_{22} \\, x_{2} + a_{23} \\, x_{3} = y_{2} \\rightarrow\n",
-    "x_{2} = \\dfrac{y_{2} - a_{23} \\, x_{3}}{a_{22}} \\\\\\\\\n",
-    "a_{11} \\, x_{1} + a_{12} \\, x_{2} + a_{13} \\, x_{3} = y_{1} \\rightarrow\n",
-    "x_{1} = \\dfrac{y_{1} - a_{12} \\, x_{2} - a_{13} \\, x_{3}}{a_{11}}\n",
-    "\\end{array}\n",
-    "\\end{split} \\: .$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Note que esta expressão permite elaborar o seguinte algoritmo para a solução deste sistema:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "----\n",
-    "for $i = N:1:-1$\n",
-    "\n",
-    ">$x_{i} = y_{i}$\n",
-    "\n",
-    ">for $j = \\left( i+1 \\right):N:1$ \n",
-    "\n",
-    ">>$x_{i} = x_{i} - a_{ij} \\, x_{j}$\n",
-    "\n",
-    ">end\n",
-    "\n",
-    ">$x_{i} = \\dfrac{x_{i}}{a_{ii}}$\n",
-    "\n",
-    "end\n",
-    "\n",
-    "-----"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**ATENÇÃO**: Neste algotimo, o comando \"for $i = N:1:-1$\" significa que o contador $i$ começa em $N$ e termina em $1$, em intervalos de $-1$. Analogamente, o comando for $j = \\left( i+1 \\right):N:1$ significa que o contador $j$ começa em $\\left( i+1 \\right)$ e termina em $N$, em intervalos de $1$."
+    "parei aqui!!!"
    ]
   },
   {
