contiuacao da aula sobre eliminacao de Gauss

--- a/Topicos/Sistemas_lineares/elim-gauss.ipynb
+++ b/Topicos/Sistemas_lineares/elim-gauss.ipynb
@@ -201,7 +201,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "where $a^{(k)}_{ij}$ é o elemento $ij$ da matriz $\\mathbf{A}^{(k)}$."
+    "where $a^{(k)}_{ij}$ é o elemento $ij$ da matriz $\\mathbf{A}^{(k)}$. A matriz $\\mathbf{M}^{(k)}$ é denominada **Transformação de Gauss**, o vetor $\\mathbf{t}^{(k)}$ é denominado **vetor de Gauss** e os elementos não-nulos do vetor $\\mathbf{t}^{(k)}$ são denominados **multiplicadores**."
    ]
   },
   {
