--- a/Topicos/Sistemas_lineares/elim-gauss.ipynb
+++ b/Topicos/Sistemas_lineares/elim-gauss.ipynb
@@ -141,14 +141,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Sistemas lineares envolvendo matrizes triangulares superiores podem ser resolvidos de forma relativamente fácil, de acordo com o algoritmo descrito em uma aula anterior."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "A transformação do sistema linear original para o sistema linear equivalente é feita de forma iterativa, por meio de sucessivas transformações lineares do tipo:"
+    "Este novo sistema linear tem como solução o mesmo vetor $\\mathbf{x}$ que é solução do sistema linear original. Contudo, este novo sistema, cuja matriz é triangular superior, pode ser resolvido de forma relativamente mais fácil, de acordo com o algoritmo descrito em uma aula anterior. A transformação do sistema linear original para o sistema linear equivalente é feita de forma iterativa, por meio de sucessivas transformações lineares do tipo:"
    ]
   },
   {
@@ -157,8 +150,9 @@
    "source": [
     "$$\n",
     "\\begin{array}{ccccc}\n",
-    "\\mathbf{A}^{(1)} = \\left(\\mathbf{I} - \\mathbf{M}^{(1)}\\right) \\mathbf{A} & & &\n",
-    "\\mathbf{y}^{(1)} = \\left(\\mathbf{I} - \\mathbf{M}^{(1)}\\right) \\mathbf{y} \\\\\\\\\n",
+    "\\mathbf{A}^{(0)} = \\mathbf{A} & & & \\mathbf{y}^{(0)} = \\mathbf{y} \\\\\\\\\n",
+    "\\mathbf{A}^{(1)} = \\left(\\mathbf{I} - \\mathbf{M}^{(1)}\\right) \\mathbf{A}^{(0)} & & &\n",
+    "\\mathbf{y}^{(1)} = \\left(\\mathbf{I} - \\mathbf{M}^{(1)}\\right) \\mathbf{y}^{(0)} \\\\\\\\\n",
     "\\mathbf{A}^{(2)} = \\left(\\mathbf{I} - \\mathbf{M}^{(2)}\\right) \\mathbf{A}^{(1)} & & &\n",
     "\\mathbf{y}^{(2)} = \\left(\\mathbf{I} - \\mathbf{M}^{(2)}\\right) \\mathbf{y}^{(1)} \\\\\\\\\n",
     "\\vdots & & & \\vdots \\\\\\\\\n",
@@ -194,14 +188,164 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$t_{i}^{(k)} = \\begin{cases} 0 & \\quad \\text{if } i \\le k \\\\\\\\ \\dfrac{a^{(k)}_{ik}}{a^{(k)}_{kk}} & \\quad \\text{if } i \\gt k\\\\ \\end{cases} \\: ,$"
+    "$t_{i}^{(k)} = \\begin{cases} 0 & \\quad \\text{if } i \\le k \\\\\\\\ \\dfrac{a^{(k-1)}_{ik}}{a^{(k-1)}_{kk}} & \\quad \\text{if } i \\gt k\\\\ \\end{cases} \\: ,$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "where $a^{(k)}_{ij}$ é o elemento $ij$ da matriz $\\mathbf{A}^{(k)}$. A matriz $\\mathbf{M}^{(k)}$ é denominada **Transformação de Gauss**, o vetor $\\mathbf{t}^{(k)}$ é denominado **vetor de Gauss** e os elementos não-nulos do vetor $\\mathbf{t}^{(k)}$ são denominados **multiplicadores**."
+    "where $a^{(k)}_{ij}$ é o elemento $ij$ da matriz $\\mathbf{A}^{(k)}$. Note que o número de iterações necessárias para transformar o sistema original (que é $N \\times N$) no sistema equivalente é igual a $N - 1$. A matriz $\\left(\\mathbf{I} - \\mathbf{M}^{(k)}\\right)$ é denominada **Transformação de Gauss**, o vetor $\\mathbf{t}^{(k)}$ é denominado **vetor de Gauss** e os elementos não-nulos do vetor $\\mathbf{t}^{(k)}$ são denominados **multiplicadores**."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###Exemplo de sistema $3 \\times 3$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "Considere, por exemplo, o sistema $3 \\times 3$ abaixo:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\\mathbf{A} \\, \\mathbf{x} = \\mathbf{y} \\: ,$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "em que"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "A = np.array([[1.,3.,2.],\n",
+    "              [7.,4.,9.],\n",
+    "              [8.,6.,5.]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "y = np.array([[5.23],\n",
+    "              [6.45],\n",
+    "              [1.67]])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A solução deste sistema é dada por:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "x = np.linalg.solve(A,y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-1.70556701]\n",
+      " [ 1.34958763]\n",
+      " [ 1.44340206]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print x"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Neste caso, 2 iterações são necessárias para transformar este sistema no sistema equivalente. Para tanto, vamos calcular a primeira Transformação de Gauss."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "I = np.identity(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "u = np.array([[1.],\n",
+    "              [0.],\n",
+    "              [0.]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "t = np.array([[0.],\n",
+    "              [A[1][0]/A[0][0]],\n",
+    "              [A[2][0]/A[0][0]]])"
    ]
   },
   {
@@ -212,7 +356,242 @@
    },
    "outputs": [],
    "source": [
-    "parei aqui!!!"
+    "A1 = (I - t*u.T).dot(A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  1.,   3.,   2.],\n",
+       "       [  0., -17.,  -5.],\n",
+       "       [  0., -18., -11.]])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "y1 = (I - t*u.T).dot(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  5.23],\n",
+       "       [-30.16],\n",
+       "       [-40.17]])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Agora a segunda Transformação de Gauss."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "u = np.array([[0.],\n",
+    "              [1.],\n",
+    "              [0.]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "t = np.array([[0.],\n",
+    "              [0.],\n",
+    "              [A1[2][1]/A1[1][1]]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "B = (I - t*u.T).dot(A1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  1.        ,   3.        ,   2.        ],\n",
+       "       [  0.        , -17.        ,  -5.        ],\n",
+       "       [  0.        ,   0.        ,  -5.70588235]])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "z = (I - t*u.T).dot(y1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  5.23      ],\n",
+       "       [-30.16      ],\n",
+       "       [ -8.23588235]])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "z"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Agora, vamos calcular a solução do novo sistema $\\mathbf{B} \\, \\mathbf{w} = \\mathbf{z}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "w = np.linalg.solve(B,z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-1.70556701],\n",
+       "       [ 1.34958763],\n",
+       "       [ 1.44340206]])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "w"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note que esta solução $\\mathbf{w}$ é igual a solução $\\mathbf{x}$ do sistema original:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-1.70556701],\n",
+       "       [ 1.34958763],\n",
+       "       [ 1.44340206]])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x"
    ]
   },
   {
@@ -226,82 +605,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Implemente o algoritmo apresentado acima para resolver um sistema envolvendo uma matriz triangular superior. **A implementação deve seguir o template da disciplina**."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "###Exemplo de implementação em Python"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "`x = np.linalg.solve(A,y)` ,\n",
-    "\n",
-    "em que A e y são arrays do numpy."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "A = np.array([[1.,2.,7.],\n",
-    "              [3.,14.,8.],\n",
-    "              [25.,6.,9.]])\n",
-    "y = np.array([[42.],\n",
-    "              [11.],\n",
-    "              [67.]])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "x = np.linalg.solve(A,y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 1.02842105]\n",
-      " [-3.32157895]\n",
-      " [ 6.80210526]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print x"
+    "Implemente o algoritmo de Eliminação de Gauss apresentado acima para resolver um sistema de ordem $N$. Use todas as funções feitas anteriormente e que são necessárias para implementar este algoritmo. **A implementação deve seguir o template da disciplina**."
    ]
   },
   {
