alteracao no texto da aula

--- a/Topicos/Sistemas_lineares/elim-gauss.ipynb
+++ b/Topicos/Sistemas_lineares/elim-gauss.ipynb
@@ -83,7 +83,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "É possível transformar este sistema linear em outro sistema linear contendo uma matriz triangular superior, tal como exemplificado abaixo:"
+    "É possível transformar este sistema linear em um sistema triangular equivalente, tal como exemplificado abaixo:"
    ]
   },
   {
@@ -97,7 +97,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "sendo"
+    "em que"
    ]
   },
   {
@@ -141,7 +141,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Este novo sistema linear tem como solução o mesmo vetor $\\mathbf{x}$ que é solução do sistema linear original. Contudo, este novo sistema, cuja matriz é triangular superior, pode ser resolvido de forma relativamente mais fácil, de acordo com o algoritmo descrito em uma aula anterior. A transformação do sistema linear original para o sistema linear equivalente é feita de forma iterativa, por meio de sucessivas transformações lineares do tipo:"
+    "Este sistema triangular equivalente tem como solução o mesmo vetor $\\mathbf{x}$ que é solução do sistema linear original. Contudo, este novo sistema pode ser resolvido de forma relativamente fácil, de acordo com o algoritmo descrito em uma aula anterior. A transformação do sistema linear original para o sistema triangular equivalente é feita de forma iterativa, por meio de sucessivas transformações lineares do tipo:"
    ]
   },
   {
@@ -195,7 +195,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "where $a^{(k)}_{ij}$ é o elemento $ij$ da matriz $\\mathbf{A}^{(k)}$. Note que o número de iterações necessárias para transformar o sistema original (que é $N \\times N$) no sistema equivalente é igual a $N - 1$. A matriz $\\left(\\mathbf{I} - \\mathbf{M}^{(k)}\\right)$ é denominada **Transformação de Gauss**, o vetor $\\mathbf{t}^{(k)}$ é denominado **vetor de Gauss** e os elementos não-nulos do vetor $\\mathbf{t}^{(k)}$ são denominados **multiplicadores**."
+    "where $a^{(k)}_{ij}$ é o elemento $ij$ da matriz $\\mathbf{A}^{(k)}$. Note que o número de iterações necessárias para transformar o sistema original (que é $N \\times N$) no sistema triangular equivalente é igual a $N - 1$. A matriz $\\left(\\mathbf{I} - \\mathbf{M}^{(k)}\\right)$ é denominada **Transformação de Gauss**, o vetor $\\mathbf{t}^{(k)}$ é denominado **vetor de Gauss** e os elementos não-nulos do vetor $\\mathbf{t}^{(k)}$ são denominados **multiplicadores**."
    ]
   },
   {
