modificacao no texto do exercicio sobre eliminacao de Gauss

--- a/Topicos/Sistemas_lineares/elim-gauss.ipynb
+++ b/Topicos/Sistemas_lineares/elim-gauss.ipynb
@@ -605,7 +605,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Implemente o algoritmo de Eliminação de Gauss apresentado acima para resolver um sistema de ordem $N$. Use todas as funções feitas anteriormente e que são necessárias para implementar este algoritmo. **A implementação deve seguir o template da disciplina**."
+    "Implemente o algoritmo de Eliminação de Gauss apresentado acima para resolver um sistema de ordem $N$. Dentre as funções feitas anteriormente, use todas aquelas que são necessárias para implementar este algoritmo. **A implementação deve seguir o template da disciplina**."
    ]
   },
   {
