eliminacao de gauss com pivotamento parcial parte 1

--- a/Topicos/Sistemas_lineares/elim-gauss.ipynb
+++ b/Topicos/Sistemas_lineares/elim-gauss.ipynb
@@ -195,7 +195,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "where $a^{(k)}_{ij}$ é o elemento $ij$ da matriz $\\mathbf{A}^{(k)}$. Note que o número de iterações necessárias para transformar o sistema original (que é $N \\times N$) no sistema triangular equivalente é igual a $N - 1$. A matriz $\\left(\\mathbf{I} - \\mathbf{M}^{(k)}\\right)$ é denominada **Transformação de Gauss**, o vetor $\\mathbf{t}^{(k)}$ é denominado **vetor de Gauss** e os elementos não-nulos do vetor $\\mathbf{t}^{(k)}$ são denominados **multiplicadores**."
+    "em que $a^{(k-1)}_{ij}$ é o elemento $ij$ da matriz $\\mathbf{A}^{(k-1)}$. Note que o número de iterações necessárias para transformar o sistema original (que é $N \\times N$) no sistema triangular equivalente é igual a $N - 1$. A matriz $\\left(\\mathbf{I} - \\mathbf{M}^{(k)}\\right)$ é denominada **Transformação de Gauss**, o vetor $\\mathbf{t}^{(k)}$ é denominado **vetor de Gauss** e os elementos não-nulos do vetor $\\mathbf{t}^{(k)}$ são denominados **multiplicadores**."
    ]
   },
   {
