reorganizacao da parte sobre nocoes de python

--- a/Conteudo/template-codigo.ipynb
+++ b/Conteudo/template-codigo.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Titulo"
+    "# Titulo"
    ]
   },
   {
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###Coisas para importar"
+    "### Coisas para importar"
    ]
   },
   {
@@ -36,17 +36,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###Minha função (Opção 1)"
+    "### Importar minhas funções de um arquivo externo"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
+    "import minhas_funcoes as mfun"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A função deve ter a seguinte estrutura:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "::python::\n",
     "def minha_funcao():\n",
     "    \n",
     "    '''\n",
@@ -85,25 +100,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###Importar minhas funções de um arquivo externo (Opção 2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import minhas_funcoes as mfun"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "###Input"
+    "### Input"
    ]
   },
   {
@@ -121,7 +118,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###Resultado da minha função"
+    "### Resultado da minha função"
    ]
   },
   {
@@ -143,25 +140,14 @@
    },
    "outputs": [],
    "source": [
-    "#Resultado gerado com a função mostrada no próprio IPython Notebook (Opção 1)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "#Resultado gerado com a função definida no arquivo externo 'minhas_funcoes.py' (Opção 2)."
+    "#Resultado gerado com a função definida no arquivo externo 'minhas_funcoes.py'."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###Resultado proveniente de outra implementação"
+    "### Resultado proveniente de outra implementação"
    ]
   },
   {
@@ -179,7 +165,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###Teste de validação"
+    "### Teste de validação"
    ]
   },
   {
@@ -230,7 +216,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.7"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
