basic matrix operations

--- a/Content/other.ipynb
+++ b/Content/other.ipynb
@@ -4,26 +4,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Produtos entre vetores"
+    "# Other products"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Sejam $\\mathbf{x}$ e $\\mathbf{y}$ dois vetores $N \\times 1$ definidos de acordo com a convenção baixo:"
+    "Let $\\mathbf{x}$ and $\\mathbf{y}$ be two $N \\times 1$ vectors given by:"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\mathbf{v} = \\left[\n",
+    "$$\\mathbf{x} = \\left[\n",
     "\\begin{array}{c}\n",
-    "v_{1} \\\\\n",
-    "v_{2} \\\\\n",
+    "x_{1} \\\\\n",
+    "x_{2} \\\\\n",
     "\\vdots \\\\\n",
-    "v_{N}\n",
+    "x_{N}\n",
     "\\end{array}\n",
     "\\right]_{N \\times 1}$$"
    ]
@@ -32,14 +32,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Além do produto escalar (definido anteriormente), podemos definir outros dois tipos de produtos entre estes vetores:"
+    "and"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Produto elemento-a-elemento (ou produto de Hadamard)**"
+    "$$\\mathbf{y} = \\left[\n",
+    "\\begin{array}{c}\n",
+    "y_{1} \\\\\n",
+    "y_{2} \\\\\n",
+    "\\vdots \\\\\n",
+    "y_{N}\n",
+    "\\end{array}\n",
+    "\\right]_{N \\times 1}$$ ."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "** Hadamard (or entrywise) product** (Horn and Johnson, 1994, chapter 5)"
    ]
   },
   {
@@ -64,17 +78,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note que o resultado é um vetor com o mesmo número de elementos dos vetores $\\mathbf{x}$ e $\\mathbf{y}$."
+    "Notice that the result is a vector with the same number of elements as $\\mathbf{x}$ and $\\mathbf{y}$."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Para mais informações:\n",
-    "\n",
-    "* Horn e Johnson (1994), Capítulo 5"
+    "Horn, R. A. and Johnson, C. R. Topics in matrix analysis, Cambridge University Press, 1994"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -392,7 +413,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.7"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
